# hackhaton_lab

./: .env_template  .gitignore  LICENSE  README.md  api_call_stream.py  links.csv  main copy.py  main-test.py  main.py  pyproject.toml
.streamlit/: config.toml  style.css
config/: app.py
data/: links.csv  processed-links.csv
notebooks/: chroma_demo.ipynb  create_vector_store.py  rag-chroma-demo.ipynb  rag_benchmark.ipynb  rag_pipeline.ipynb
pages/: chatbot.py  pratice.py  pratice_backend.py  pratice_cyber.py  pratice_frontend.py  pratice_gamedev.py
pages/practice_modules/: __init__.py  backend.py  cyber.py  frontend.py  gamedev.py
refs/: metiers-matieres-sujets.txt  skills.txt  urls.txt
src/config/: app.py
src/pages/: chatbot.py  pratice.py
