[project]
name = "hackthon-start"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"streamlit",
	"streamlit-monaco",
	"python-dotenv",
	"chromadb>=1.1.1",
	"fastembed>=0.7.3",
	"sentence-transformers>=5.1.1",
	"requests",
]

[dependency-groups]
dev = [
    "notebook>=7.4.7",
    "beautifulsoup4>=4.14.2",
]
